<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Prototype</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="but1">Send a SMS</string>
    <string name="but2">Fill a Form</string>
    <string name="but3">Browse</string>
    <string name="but4">Media</string>
    <string name="but5">Rate a Movie</string>
    <string name="main">Select a Task</string>
    <string name="str1">To:</string>
    <string name="str2">Message:</string>
    <string name="str3">Send</string>
    <string name="btr1">Google</string>
    <string name="btr2">Facebook</string>
    <string name="btr3">YouTube</string>
    <string name="btr4">FlipKart</string>
    <string name="btr5">Hotmail</string>
    <string name="btr6">Yahoo</string>
    <string name="chn">Chennai Express</string>
    <string name="tum">Tu Mera 22 Main Tera 22</string>
    <string name="bhg">Bhaag Milkha Bhaag</string>
    <string name="submit">Rate</string>

</resources>