<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/B1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_bright"
        android:text="@string/btr1" />

    <Button
        android:id="@+id/B2"
        android:layout_width="150dp"
        android:layout_height="220dp"
        android:layout_alignTop="@+id/B1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/B1"
        android:background="@android:color/holo_green_light"
        android:text="@string/btr2" />

    <Button
        android:id="@+id/B3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/B1"
        android:layout_below="@+id/B1"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/btr3" />

    <Button
        android:id="@+id/B4"
        android:layout_width="270dp"
        android:layout_height="70dp"
        android:layout_alignLeft="@+id/B3"
        android:layout_below="@+id/B2"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_purple"
        android:text="@string/btr4" />

    <Button
        android:id="@+id/B5"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/B4"
        android:layout_below="@+id/B4"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_light"
        android:text="@string/btr5" />

    <Button
        android:id="@+id/B6"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/B2"
        android:layout_alignTop="@+id/B5"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/btr6" />

</RelativeLayout>