<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainMenu" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/main"
        android:textColor="@android:color/white"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:text="@string/but1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_centerVertical="true"
        android:background="@android:color/holo_green_dark"
        android:text="@string/but3"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_below="@+id/button1"
        android:layout_marginTop="20dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/but2"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_below="@+id/button3"
        android:layout_marginTop="22dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/but4"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button4"
        android:layout_below="@+id/button4"
        android:layout_marginTop="24dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/but5"
        android:textColor="@android:color/white" />

</RelativeLayout>