<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/bhaag" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageButton1"
        android:src="@drawable/chennai" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="150dp"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/tumera" />

    <TextView
        android:id="@+id/textone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/imageButton1"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/bhg"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/texttwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton2"
        android:text="@string/chn"
        android:textColor="@android:color/holo_orange_dark"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textthree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/texttwo"
        android:layout_alignTop="@+id/imageButton3"
        android:text="@string/tum"
        android:textColor="@android:color/holo_orange_dark"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>