<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/black"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="14dp"
        android:text="@string/str1"
        android:textColor="@android:color/holo_orange_dark"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txt1"
        android:layout_alignBottom="@+id/txt1"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/txt1"
        android:ems="10"
        android:background="@android:color/holo_green_light"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txt1"
        android:layout_below="@+id/txt1"
        android:layout_marginTop="25dp"
        android:textColor="@android:color/holo_orange_dark"
        android:text="@string/str2"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/edt2"
        android:layout_width="270dp"
        android:layout_height="250dp"
        android:layout_alignLeft="@+id/txt2"
        android:layout_below="@+id/txt2"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:background="@android:color/holo_green_light"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/but1"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edt2"
        android:layout_below="@+id/edt2"
        android:layout_marginTop="19dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/str3"
        android:textColor="@android:color/white" />

</RelativeLayout>